--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <label for="checkbox_toggle" class="hamburger">&#9776</label>
 
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="home.html">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
@@ -25,7 +25,6 @@
     </header>
 
     <div class="form-container">
-        <span class="close-icon"><ion-icon name="close"></ion-icon></span>
         <div class="formbox login">
             <h2>Login</h2>
             <form action="#">
@@ -46,7 +45,7 @@
                     <a href="#">Forget Password?</a>
                 </div>
 
-                <button class="btn" type="submit">Login</button>
+                <button class="btn" type="submit" onclick="window.location.href='dashboard.html'">Login</button>
 
                 <div class="reg-login">
                     <p>Don't have an account? <a href="#" class="reg-link">Register</a></p>
